syntax = "proto3";

package farm;

// #file: client-greenhouse\proto\greenhouse.proto 
service GreenhouseService {
    // Register greenhouse device on server
    rpc registerGreenhouse (RegisterGreenhouse) returns (stream ServerRequest);
    // greenhouse device sends sensors mesurements and receives new climate settings if neccesery
    // for example if temp is too low (also include CO2 levels)
    rpc getClimateSetting (stream SensorReadings) returns (stream ClimateSetting);
}

message RegisterGreenhouse {
    string greenhouse = 1;

}

message SensorReadings {
    string deviceID = 1;
    uint32 air_humidity = 2;
    uint32 soil_moisture = 3;
    uint32 co2 = 4;
    uint32 temp = 5;
    uint32 light = 6;
}
message ClimateSetting {
    string deviceID = 1;
    uint32 air_humidity_on = 2;
    uint32 soil_moisture_on = 3;
    uint32 co2_on = 4;
    uint32 temp_on = 5;
    uint32 light_on = 6;    
}

message ServerRequest{
    
    uint32 task = 1;
    string deviceID = 2;
    string message = 3;
}